# Flashpoint

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/jobs/: scheduler.py  seed.py
backend/app/routes/: events.py  health.py  hotspots.py  priorities.py  system.py
backend/app/services/ingestion/: base.py  classifier.py  deduper.py  eventregistry_source.py  gdelt_source.py  mock_source.py  normalizer.py
backend/app/services/scoring/: cluster.py  confidence.py  hotspot.py  trends.py
backend/app/utils/: time.py
backend/tests/: test_classifier.py  test_deduper_enhanced.py  test_eventregistry_confidence.py  test_eventregistry_ingestion.py  test_hotspot_clustering.py  test_hotspot_naming.py
deploy/pi/: Flashpoint-launcher.desktop  README.md  flashpoint-backend.service  flashpoint.desktop  install.sh
desktop/: README.md  requirements.txt
desktop/app/: config.py  launcher.py  main.py  qt_compat.py  window.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  placeholder.txt  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/detail/: DetailPane.jsx
frontend/src/components/feed/: EventFeed.jsx
frontend/src/components/filters/: FilterRail.jsx
frontend/src/services/: api.js
frontend/src/styles/: components.css  index.css  layout.css
frontend/src/utils/: time.js
scripts/: dev_backend.sh  dev_desktop.sh  pi_fix_qt_runtime.sh  pi_start.sh  run.sh  seed_mock_data.sh  verify_models.py
(+4 files in other folders)
