[project]
name = "flashpoint"
version = "0.1.0"
description = "Local-first U.S. intelligence dashboard"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "pydantic-settings>=2.0.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["backend"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
